--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,3 +5,8 @@ data_ingestion:
   source_URL: https://github.com/Divyanshu9822/ml-ops-holiday-package-prediction/raw/main/data/raw/travel.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+data_preprocessing:
+  root_dir: artifacts/data_preprocessing
+  raw_data_path: artifacts/data_ingestion/travel.csv
+  processed_data_path: artifacts/data_preprocessing/travel_processed.csv
