--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,7 +6,8 @@ data_ingestion:
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
 
-data_preprocessing:
-  root_dir: artifacts/data_preprocessing
+data_validation:
+  root_dir: artifacts/data_validation
   raw_data_path: artifacts/data_ingestion/travel.csv
-  processed_data_path: artifacts/data_preprocessing/travel_processed.csv
+  processed_data_path: artifacts/data_validation/travel_processed.csv
+  STATUS_FILE: artifacts/data_validation/status.txt
