--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,7 +15,7 @@ data_validation:
 data_transformation:
   root_dir: artifacts/data_transformation
   processed_data_path: artifacts/data_validation/travel_processed.csv
-  preprocessor_model_name : preprocessor.joblib
+  preprocessor_model_name: preprocessor.joblib
 
 model_trainer:
   root_dir: artifacts/model_trainer
@@ -23,3 +23,10 @@ model_trainer:
   test_data_path: artifacts/data_transformation/test.csv
   trained_model_name: model.joblib
   preprocessor_model_path: artifacts/data_transformation/preprocessor.joblib
+
+model_evaluation:
+  root_dir: artifacts/model_evaluation
+  test_data_path: artifacts/data_transformation/test.csv
+  preprocessor_model_path: artifacts/data_transformation/preprocessor.joblib
+  model_path: artifacts/model_trainer/model.joblib
+  metric_file_name: artifacts/model_evaluation/metrics.json
