--- a/Dockerfile-flask
+++ b/Dockerfile-flask
@@ -3,4 +3,8 @@ WORKDIR /app
 COPY . .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
-CMD ["python", "api.py"]
+ENV FLASK_APP=api.py
+ENV FLASK_RUN_HOST=0.0.0.0
+ENV FLASK_RUN_PORT=8000
+EXPOSE 8000
+CMD ["flask", "run"]
